<resources>
    <string name="app_name">Cool Weather</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_apps">My Apps</string>
    <string name="title_activity_setting">Settings</string>
    <string name="units">Units</string>
    <string name="c_temp">°C</string>
    <string name="f_temp">°F</string>
    <string name="background">background</string>
    <string name="my_apps">My Apps</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="overflow">Overflow</string>
</resources>
