<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/overflow"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="201"
        android:title="@string/overflow"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_apps"
                android:icon="@drawable/ic_get_app_black_18dp"
                android:orderInCategory="100"
                android:title="@string/my_apps"
                app:showAsAction="always|withText">
            </item>

            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/ic_settings_black_18dp"
                android:orderInCategory="100"
                android:title="@string/settings"
                app:showAsAction="always|withText">
            </item>

            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share_black_18dp"
                android:orderInCategory="100"
                android:title="@string/share"
                app:showAsAction="always|withText">
            </item>

        </menu>
    </item>

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/action_settings"-->
        <!--app:showAsAction="never"/>-->
</menu>
